<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="app.futured.arkitekt.sample.ui.form.FormView"/>

        <variable
            name="viewModel"
            type="app.futured.arkitekt.sample.ui.form.FormViewModel"/>

        <variable
            name="viewState"
            type="app.futured.arkitekt.sample.ui.form.FormViewState"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconClick="@{()-> viewModel.onBack()}"
            app:title="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/form_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewState.login}"/>

            <EditText
                android:id="@+id/form_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewState.password}"/>

            <Button
                android:id="@+id/form_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewState.submitEnabled}"
                android:onClick="@{() -> viewModel.onSubmit()}"
                android:text="submit"/>

            <TextView
                android:id="@+id/form_storedContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewState.storedContent}"/>

        </LinearLayout>

    </LinearLayout>

</layout>
